# bodhilib

./: .codespellrc  .env.ci  .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  Cargo.toml  Makefile  README.md  SETUP.md  codespell-ignore.txt  guiding-principles.md  make.py  mypy.ini  pre-commit.sh  pydocstyle.ini  pyproject.toml  pytest.ini  pytest.sh  ruff.toml  setup.cfg  tmp.sh  tox.ini  update-configs.py  update_configs.py
bodhilibrs/: Cargo.toml  Makefile  pyproject.toml  pytest.ini
bodhilibrs/benches/: benchmark.rs
bodhilibrs/benchmark-results/: no-impl.md  recursive-text-splitter.md
bodhilibrs/benchmarks/: test_bench_glob.py  test_recursive_text_splitter.py
bodhilibrs/pytests/: test_glob.py  test_openai.py
bodhilibrs/python/bodhilibrs/: __init__.py  _glob.py
bodhilibrs/src/: _glob.rs  async_iter.rs  common.rs  glob.rs  glob_py.rs  lib.rs  openai_py.rs  splitter.rs
bodhilibrs_frompyo3/: Cargo.toml
ci/: requirements.txt
core/: .env.ci  .env.sample  pyproject.toml  tox.ini
core/src/bodhiext/prompt_source/: __init__.py  _prompt_source.py  _yaml.py
core/src/bodhiext/prompt_template/: __init__.py  _string_prompt_template.py  _utils.py
core/src/bodhilib/: __init__.py  _components.py  _filter.py  _models.py  _plugin.py  _version.py  _yaml.py
core/src/bodhilib/logging/: _logging.py
core/stubs/bodhilib/: __init__.pyi  _components.pyi  _filter.pyi  _models.pyi  _plugin.pyi
core/stubs/bodhilib/common/: __init__.pyi
core/stubs/bodhilib/logging/: __init__.pyi  _logging.pyi
core/tests/: prompt_utils.py
core/tests/test_data/prompt-sources/: simple-templates.txt
core/tests/tests_bodhiext_common/test_data/prompt-templates/: escape-break-sequences.txt  jinja2-few-shot.yaml  multiple-templates.yaml  simple-jinja2-prompt.yaml  supports-unknown-metafields.yaml
core/tests/tests_bodhiext_common/unit/: test_bodhi_prompt_source.py  test_dump_prompt_template_yaml.py  test_load_prompt_template_yaml.py  test_prompt_template.py  test_prompt_template_parser.py
core/tests/tests_bodhilib/: utils.py
core/tests/tests_bodhilib/unit/: test_document.py  test_embedding.py  test_enum.py  test_filter.py  test_llm.py  test_node.py  test_plugin.py  test_processor.py  test_prompt.py  test_prompt_input.py  test_prompt_stream.py  test_pydantic_migration.py  test_resource.py  test_role.py  test_str_enum_mixin.py  test_version.py
core/tests/unit/: test_data_loader.py  test_llm.py  test_node.py  test_plugin.py  test_prompt.py  test_prompt_input.py  test_prompt_template_parser.py  test_symbol_splitter.py
design/: CHANGELOG.md  design.cabal  package.yaml
docs/: build_docs.sh  build_guides.sh  (+5 more)
libs/bodhilib.cohere/: AUTHORS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
libs/bodhilib.cohere/bodhilib/cohere/: __init__.py  llm.py
libs/bodhilib.cohere/docs/: build_docs.sh  conf.py  index.rst  installation.md  usage.md
libs/bodhilib.cohere/docs/api/: authors.md  conf.py
libs/bodhilib.cohere/src/bodhilib/cohere/: __init__.py  _cohere_llm.py  _cohere_plugin.py  _llm.py  _plugin.py  llm.py
libs/bodhilib.cohere/tests_bodhilib_cohere/integration/: test_cohere_stream.py  test_generate.py
libs/bodhilib.cohere/tests_bodhilib_cohere/unit/: test_cohere_llm.py  test_cohere_plugin.py  test_plugin.py
libs/bodhisearch/: .env.sample  pyproject.toml
libs/bodhisearch-cohere/: CONTRIBUTING.md  Makefile  README.md  pyproject.toml
libs/bodhisearch-cohere/bodhisearch_cohere/: __init__.py  llm.py
libs/bodhisearch-cohere/docs/: build_docs.sh  conf.py  history.md  index.rst  installation.md  usage.md
libs/bodhisearch-cohere/tests/integration/: test_generate.py
libs/bodhisearch-cohere/tests_bodhisearch_cohere/integration/: test_generate.py
libs/bodhisearch/bodhisearch/: __init__.py  hookspecs.py  llm.py  logging.py  plugin.py  prompt.py  schemas.py
libs/bodhisearch/bodhisearch/logger/: logging.py
libs/bodhisearch/bodhisearch/openai/: __init__.py  llm.py
libs/bodhisearch/bodhisearch/plugins/: hookspecs.py
libs/bodhisearch/src/bodhisearch/: prompt.py
libs/bodhisearch/src/bodhisearch/openai/: llm.py
libs/bodhisearch/tests/: conftest.py  prompt_utils.py  test_llm.py  test_prompt.py
libs/bodhisearch/tests/integration/: test_llm.py  test_plugin.py  test_plugin_manager.py
libs/bodhisearch/tests/integration/openai/: test_llm.py
libs/bodhisearch/tests/unit/: test_plugin.py  test_prompt.py
libs/bodhisearch/tests/unit/openai/: test_llm.py
plugins/bodhiext.cohere/: .env.ci  pyproject.toml  tox.ini
plugins/bodhiext.cohere/src/bodhiext/cohere/: _cohere.py
plugins/bodhiext.cohere/tests/tests_bodhiext_cohere/integration/: test_cohere_live.py
plugins/bodhiext.cohere/tests/tests_bodhiext_cohere/unit/: test_cohere.py  test_cohere_plugin.py
plugins/bodhiext.openai/: README.md  pyproject.toml  tox.ini
plugins/bodhiext.openai/src/bodhiext/openai/: _openai.py  _version.py
plugins/bodhiext.openai/tests/tests_bodhiext_openai/integration/: test_openai_live.py
plugins/bodhiext.openai/tests/tests_bodhiext_openai/unit/: test_openai.py
plugins/bodhiext.qdrant/: .env.ci  pyproject.toml  tox.ini
plugins/bodhiext.qdrant/src/bodhiext/qdrant/: _qdrant.py
plugins/bodhiext.qdrant/tests/tests_bodhiext_qdrant/integration/: test_qdrant_live.py
plugins/bodhiext.qdrant/tests/tests_bodhiext_qdrant/unit/: test_filter_transformer.py  test_qdrant.py
staging/bodhiapp/: Makefile  pyproject.toml
staging/bodhiapp/src/bodhiapp/: app.py
staging/bodhiext.sentence_transformers/: pyproject.toml
staging/bodhiext.sentence_transformers/src/bodhiext/sentence_transformers/: _sentence_transformer_embedder.py  _version.py
staging/bodhiext.sentence_transformers/tests/tests_bodhiext_sentence_transformers/: conftest.py
staging/bodhiext.sentence_transformers/tests/tests_bodhiext_sentence_transformers/integration/: test_sentence_transformer.py
staging/bodhiext.sentence_transformers/tests/tests_bodhiext_sentence_transformers/unit/: test_plugin.py
staging/bodhitest/: pyproject.toml  pytest.ini
staging/bodhitest/tests/tests_bodhitest/: test_engine.py
(+357 files in other folders)
