# contains common libraries for the project
[tool.poetry.dependencies]
python = "^3.8.1,<3.12"

[tool.poetry]
name = "bodhilib-mono"
version = "0.1.0"
description = "Mono-repo for bodhiLib"
authors = ["Amir Nagri <amir.nagri@proton.me>"]
license = "MIT"
include = ["LICENSE", "README.md"]

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-socket = "^0.6.0"
pytest-dotenv = "^0.5.2"
pytest-timeout = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
mypy = "^1.6.0"
ruff = "^0.0.292"
codespell = "^2.2.6"
pydocstyle = "^6.3.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.1.2"
sphinx-copybutton = "^0.5.2"
sphinx-rtd-theme = "^1.3.0"
toml = "^0.10.2"
