# contains common libraries for the project
[tool.poetry]
name = "bodhilib-mono"
version = "0.1.0"
description = "Mono-repo for bodhiLib"
authors = ["Amir Nagri <amir.nagri@proton.me>"]
license = "MIT"
include = ["LICENSE", "README.md"]
packages = [{ include = "bodhilib_mono", from = "mono" }]

[tool.poetry.dependencies]
python = "^3.8.1,<3.12"
pytest = { version = "==7.4.2", optional = true }
pytest-cov = { version = "==4.1.0", optional = true }
pytest-socket = { version = "==0.6.0", optional = true }
pytest-dotenv = { version = "==0.5.2", optional = true }
pytest-timeout = { version = "==2.2.0", optional = true }

[tool.poetry.extras]
test = [
    "pytest",
    "pytest-cov",
    "pytest-socket",
    "pytest-dotenv",
    "pytest-timeout",
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
mypy = "^1.6.0"
ruff = "^0.0.292"
codespell = "^2.2.6"
pydocstyle = "^6.3.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.1.2"
sphinx-copybutton = "^0.5.2"
sphinx-rtd-theme = "^1.3.0"
toml = "^0.10.2"

# for VS Code python formatter (black) to not wrap long lines
[tool.black]
line-length = 120
target-version = ['py38']
preview = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''