# contains common libraries for the project
[tool.poetry]
name = "bodhilib-mono"
version = "0.1.0-dev"
description = "Monorepo for bodhilib"
authors = ["Amir Nagri <amir.nagri@proton.me>"]
license = "MIT"
include = ["LICENSE", "README.md"]
packages = [{ include = "bodhilib_mono", from = "bodhilib_mono" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8.1,<3.12"
pytest = "==7.4.4"
pytest-cov = "==4.1.0"
pytest-socket = "==0.6.0"
pytest-dotenv = "==0.5.2"
pytest-timeout = "==2.2.0"
pre-commit = "^3.3.3"
mypy = "^1.6.0"
ruff = "^0.0.292"
codespell = "^2.2.6"
pydocstyle = "^6.3.0"
tox = "^4.11.3"
tomli = "^2.0.1"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.1.2"
sphinx-copybutton = "^0.5.2"
sphinx-rtd-theme = "^1.3.0"
tomli = "^2.0.1"

[tool.poetry.group.ci.dependencies]
tomli = "^2.0.1"
pyyaml = "^6.0.1"
pre-commit = "^3.3.3"
pip = "^23.3.0"
tox = "^4.11.3"

[tool.poetry.extras]
test = [
  "pytest",
  "pytest-cov",
  "pytest-socket",
  "pytest-dotenv",
  "pytest-timeout",
]
dev = ["pre-commit", "mypy", "ruff", "codespell", "pydocstyle", "tomli"]
compat = ["tox"]

# for VS Code python formatter (black) to not wrap long lines
[tool.black]
line-length = 120
target-version = ['py38']
preview = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# for VS Code mypy plugin, ignoring the mypy.ini file in root
[tool.mypy]
python_version = 3.8
plugins = ['pydantic.mypy']
exclude = '(?x)(test\_.*|conftest\.py|docs/.*/conf\.py)'
mypy_path = ["src"]
disallow_incomplete_defs = true
disallow_untyped_defs = true
explicit_package_bases = true
ignore_missing_imports = true
namespace_packages = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
# disallow_untyped_calls = true
