[package]
name = "bodhilibrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bodhilibrs"
crate-type = ["cdylib"]

[dependencies]
async-openai = "0.17.1"
dotenv = "0.15.0"
lazy_static = "1.4.0"
pyo3 = { version = "0.20.1", features = ["auto-initialize"] }
tokio = { version = "1.35.1", features = ["full"] }
