[package]
name = "bodhilibrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bodhilibrs"
crate-type = ["rlib", "cdylib"]

[dependencies]
async-openai = "0.17.1"
dotenv = "0.15.0"
glob = "0.3.1"
lazy_static = "1.4.0"
pyo3 = { version = "0.20.1", features = ["auto-initialize"] }
pyo3-asyncio = { version = "0.20.0", features = [
  "tokio-runtime",
  "attributes",
] }
tempfile = "3.9.0"
tokio = { version = "1.35.1", features = ["full"] }
frompyo3 = { path = "../bodhilibrs_frompyo3" }
regex = "1.10.2"
rayon = "1.8.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false

[profile.bench]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
