[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "bodhilibrs"
requires-python = ">=3.8.1"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = ["bodhilib"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"

[tool.poetry]
name = "bodhilibrs"
version = "0.1.0"
description = "Rust core for bodhilib"
authors = ["Amir Nagri <amir.nagri@proton.me>"]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
bodhilib = { path = "../core", develop = true }

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-dotenv = "^0.5.2"
pytest-timeout = "^2.2.0"
bodhilib = {path = "../core"}
