[tool.poetry]
name = "bodhilib.cohere"
version = "0.1.0"
description = ""
authors = ["Amir Nagri <amir.nagri@proton.me>"]
packages = [{ include = "bodhilib" }]

[tool.poetry.dependencies]
python = "^3.8.1,<3.12"
bodhilib = { path = "../bodhilib", develop = true }
cohere = "^4.19.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-dotenv = "^0.5.2"

[tool.poetry.group.docs.dependencies]
autodoc-pydantic = "^1.9.0"
myst-parser = "^2.0.0"
sphinx = "^6.2.1"
sphinx-autobuild = "^2021.3.14"
sphinx-book-theme = "^1.0.1"
sphinx-copybutton = "^0.5.2"
esbonio = "^0.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests_bodhilib_cohere"]
filterwarnings = ["error"]
markers = [
  "all: tagged on all tests using hooks in conftest.py",
  "live: calls external APIs (skipped by default)",
]
addopts = '-m "not live"'
env_files = [".env.test"]


[tool.poetry.plugins.bodhilib]
cohere = "bodhilib.cohere.llm"

# only for black configs
[tool.black]
line-length = 120
target-version = ['py38']
preview = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
