[tool.poetry]
name = "bodhilib.cohere"
version = "0.1.0"
description = ""
authors = ["Amir Nagri <amir.nagri@proton.me>"]
packages = [{ include = "bodhilib", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8.1,<3.12"
bodhilib = { path = "../bodhilib", develop = true }
cohere = "^4.19.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests_bodhilib_cohere"]
filterwarnings = ["error"]
markers = [
  "all: tagged on all tests using hooks in conftest.py",
  "live: calls external APIs (skipped by default)",
]
addopts = '-m "not live"'
env_files = [".env.test"]


[tool.poetry.plugins.bodhilib]
cohere = "bodhilib.cohere"

# only for black configs
[tool.black]
line-length = 120
target-version = ['py38']
preview = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
