[tool.poetry]
name = "bodhisearch-cohere"
version = "0.1.0"
description = ""
authors = ["Amir Nagri <amir.nagri@proton.me>"]

[tool.poetry.dependencies]
python = "^3.8.1,<3.12"
bodhisearch = { path = "../bodhisearch", develop = true }
cohere = "^4.19.2"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests_bodhisearch_cohere"]
filterwarnings = ["error"]
markers = [
  "all: tagged on all tests using hooks in conftest.py",
  "live: calls external APIs (skipped by default)",
]
addopts = '-m "not live"'
env_files = [".env.test"]


[tool.poetry.plugins.bodhisearch]
cohere = "bodhisearch_cohere"

# only for black configs
[tool.black]
line-length = 120
target-version = ['py38']
preview = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
