[tool.poetry]
name = "bodhisearch"
version = "0.1.0"
description = "intuitive and powerful library to work with LLMs"
authors = ["Amir Nagri <amir.nagri@proton.me>"]
readme = "README.md"
packages = [{ include = "bodhisearch", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8.1,<3.12"
python-dotenv = "^1.0.0"
openai = "^0.27.8"
pluggy = "^1.2.0"
pytest-dotenv = "^0.5.2"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
flake8 = "^6.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
preview = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]
markers = [
    "all: tagged on all tests using hooks in conftest.py",
    "live: calls external APIs (skipped by default)",
]
addopts = '-m "not live"'
env_files = [".env.test"]
