[tool.poetry]
name = "bodhiext.cohere"
version = "0.1.1-dev"
description = "Bohilib plugin for Cohere"
authors = ["Amir Nagri <amir.nagri@proton.me>"]
readme = "README.md"
packages = [{ include = "bodhiext", from = "src" }]
license = "MIT"
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.8.1,<3.12"
bodhilib = { path = "../../core", develop = true }
cohere = "^4.21"

[tool.poetry.group.dev.dependencies]
bodhilib-mono = { path = "../..", extras = ["dev"], develop = true }

[tool.poetry.group.test.dependencies]
bodhilib-mono = { path = "../..", extras = ["test"], develop = true }

[tool.poetry.group.compat.dependencies]
bodhilib-mono = { path = "../..", extras = ["compat"], develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.bodhilib]
"bodhiext.cohere" = "bodhiext.cohere"

[tool.bodhilib]
version = "0.1.15"
