[tool.poetry]
name = "bodhiext.qdrant"
version = "0.1.3-dev"
description = "Bodhilib plugin for Qdrant Vector DB"
authors = ["Amir Nagri <amir.nagri@proton.me>"]
readme = "README.md"
packages = [{ include = "bodhiext", from = "src" }]
license = "MIT"
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.8.1,<3.12"
bodhilib = { path = "../../core", develop = true }
qdrant-client = "^1.5.0"
httpx = "==0.24.1"

[tool.poetry.group.dev.dependencies]
bodhilib-mono = { path = "../..", extras = ["dev"], develop = true }

[tool.poetry.group.test.dependencies]
bodhilib-mono = { path = "../..", extras = ["test"], develop = true }

[tool.poetry.group.compat.dependencies]
bodhilib-mono = { path = "../..", extras = ["compat"], develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.bodhilib]
"bodhiext.qdrant" = "bodhiext.qdrant"

[tool.bodhilib]
version = "0.1.16"
