[tool.poetry]
name = "bodhitest"
version = "0.1.0-dev"
description = "Project to test integrated components of bodhilib"
authors = ["Amir Nagri <amir.nagri@proton.me>"]
readme = "README.md"
packages = [{ include = "bodhitest", from = "src" }]
license = "MIT"
include = ["LICENCE"]

[tool.poetry.dependencies]
python = "^3.8.1,<3.12"
bodhilib = { path = "../../core", develop = true }
bodhiext-common = { path = "../../plugins/bodhiext.common", develop = true }
bodhiext-openai = { path = "../../plugins/bodhiext.openai", develop = true }
bodhiext-qdrant = { path = "../../plugins/bodhiext.qdrant", develop = true }
bodhiext-st = { path = "../../plugins/bodhiext.st", develop = true }

[tool.poetry.group.dev.dependencies]
bodhilib-mono = { path = "../..", extras = ["dev"], develop = true }

[tool.poetry.group.test.dependencies]
bodhilib-mono = { path = "../..", extras = ["test"], develop = true }

[tool.poetry.group.compat.dependencies]
bodhilib-mono = { path = "../..", extras = ["compat"], develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bodhilib]
version = "0.1.16"
